# GridInterpolate

./: .gitignore  README.md
.github/workflows/: gtests.yml
cpp/: CMakeLists.txt
cpp/src/: ClosestNeighborGridInterpolation.cpp  ClosestNeighborGridInterpolation.h  Grid.cpp  Grid.h  IGridInterpolation.h  LinearGridInterpolation.cpp  LinearGridInterpolation.h  main.cpp
tests/: CMakeLists.txt  DownscaleTest.cpp  GridRescaleTest.cpp  downscale_test.cpp
